crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__native_queries__select_artist.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "AC/DC"
      },
      {
        "Name": "Accept"
      },
      {
        "Name": "Aerosmith"
      },
      {
        "Name": "Alanis Morissette"
      },
      {
        "Name": "Alice In Chains"
      }
    ]
  }
]
