crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__native_queries__select_sort_relationship.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "title": "A Matter of Life and Death",
        "AlbumId": 94
      },
      {
        "title": "A Real Dead One",
        "AlbumId": 95
      },
      {
        "title": "A Real Live One",
        "AlbumId": 96
      },
      {
        "title": "Appetite for Destruction",
        "AlbumId": 90
      },
      {
        "title": "Album Of The Year",
        "AlbumId": 74
      }
    ]
  }
]
